# NLP-underachievers

./: .gitignore  README.md  pyproject.toml  run_experiments.py  run_experiments.slurm
configs/: mbert.yaml  mbert_language_bias.yaml  xlmr.yaml  xlmr_language_bias.yaml
experiments/: configs.py
models/: factory.py  mbert.py  xlmr.py
outputs/mbert_baseline_run/: dev_predictions_google-bert-bert-base-multilingual-cased.iob2
outputs/mbert_baseline_run/test_predictions/: predictions_best_google-bert-bert-base-multilingual-cased.iob2
outputs/test_run/: dev_predictions_google-bert-bert-base-multilingual-cased.iob2
outputs/xlm-r_baseline_run/: dev_predictions_FacebookAI-xlm-roberta-base.iob2
outputs/xlm-r_baseline_run/test_predictions/: predictions_FacebookAI-xlm-roberta-base.iob2
scripts/: download_data.py  predict.slurm  prediction.slurm  run_analysis.py  run_experiments.slurm  setup_env.slurm  train.slurm
src/: __init__.py  data.py  data_stats.py  error_analysis.py  evaluate.py  model_factory.py  modeling.py  predict.py  run_experiments.py  train.py  utils.py
utils/: checkpoints.py  logger.py
