[project]
name = "nlp-underachievers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle",
    "torch",
    "transformers",
    "datasets",
    "seqeval",
    "accelerate",
    "evaluate",
    "scikit-learn",
    "numpy",
    "pandas",
    "tqdm",
    "pyyaml",
]
